--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -1,32 +1,41 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const buttontextprint = /*[[#{buttontextprint}]]*/null;
-	const buttontextcol = /*[[#{buttontextcol}]]*/null;
-	const Ruchers = /*[[#{Ruchers}]]*/null;
-	$(document).ready(function() {
-		new DataTable('#ruchers', {
-			dom : 'Blftip',
-			scrollX: true,
-			buttons : [ 'csv', {
-				extend : 'pdf',
-				exportOptions : {
-					columns : ':visible'
-				},
-				title : Ruchers + " " + (new Date()).toLocaleDateString()
-			}, {
-				extend : 'print',
-				text : buttontextprint
-			}, {
-				extend : 'colvis',
-				text : buttontextcol
-			} ]
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:inline="javascript">
+		const buttontextprint = /*[[#{buttontextprint}]]*/null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/null;
+		const Ruchers = /*[[#{Ruchers}]]*/null;
+		$(document).ready(function () {
+			const idTbl = '#ruchers';
+			new DataTable(idTbl, {
+				dom: 'Blftip',
+				scrollX: true,
+				buttons: ['csv', {
+					extend: 'pdf',
+					exportOptions: {
+						columns: ':visible'
+					},
+					action: function (e, dt, node, config) {
+						config.title = Ruchers + " " + (new Date()).toLocaleDateString();
+						const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+						if (inputSearch.length !== 0) {
+							config.title += " <" + inputSearch + ">";
+						}
+						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
+					},
+				}, {
+						extend: 'print',
+						text: buttontextprint
+					}, {
+						extend: 'colvis',
+						text: buttontextcol
+					}]
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
@@ -38,24 +47,19 @@
 				<h1 class="item" th:text="#{Ruchers}"></h1>
 			</div>
 			<div class="col">
-				<a id="cree" th:href="@{/rucher/cree}" class="bi-plus-lg"
-					th:title="#{ajouterRucher}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{/rucher/Gg}" class="bi-google" th:title="#{carteGg}"
-					aria-hidden="true"></a> <a th:href="@{'/rucher/Ign'}"
-					th:title="#{carteIgn}" aria-hidden="true"><img
-					th:src="@{'/images/france.svg'}" style="margin-bottom: 2px;" /></a> <a
-					th:href="@{/rucher/Osm}" class="bi-globe"
-					th:title="#{carteOsm}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{/rucher/statistiques}" class="bi-table"
-					th:title="#{statistiquesruchers}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{'/rucher/historiques/true'}" class="bi-truck-front"
+				<a id="cree" th:href="@{/rucher/cree}" class="bi-plus-lg" th:title="#{ajouterRucher}"
+					aria-hidden="true"></a> &nbsp; <a th:href="@{/rucher/Gg}" class="bi-google" th:title="#{carteGg}"
+					aria-hidden="true"></a> <a th:href="@{'/rucher/Ign'}" th:title="#{carteIgn}" aria-hidden="true"><img
+						th:src="@{'/images/france.svg'}" style="margin-bottom: 2px;" /></a> <a th:href="@{/rucher/Osm}"
+					class="bi-globe" th:title="#{carteOsm}" aria-hidden="true"></a> &nbsp; <a
+					th:href="@{/rucher/statistiques}" class="bi-table" th:title="#{statistiquesruchers}"
+					aria-hidden="true"></a> &nbsp; <a th:href="@{'/rucher/historiques/true'}" class="bi-truck-front"
 					th:title="#{transhumances}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid" id="ruchersDiv">
-		<table class="table table-bordered table-striped table-sm"
-			id="ruchers">
+		<table class="table table-bordered table-striped table-sm" id="ruchers">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
@@ -75,17 +79,13 @@
 			</thead>
 			<tbody>
 				<tr th:each="rucher : ${ruchers}">
-					<td><a th:href="@{'/rucher/'+${rucher.id}}"
-						th:text="${rucher.nom}"></a></td>
-					<td th:if="${session.voirInactif}"
-						th:text="${rucher.actif}? #{oui} : #{non}"></td>
+					<td><a th:href="@{'/rucher/'+${rucher.id}}" th:text="${rucher.nom}"></a></td>
+					<td th:if="${session.voirInactif}" th:text="${rucher.actif}? #{oui} : #{non}"></td>
 					<td th:text="${rucher.contact?.nom}"></td>
 					<td th:text="${rucher.adresse}"></td>
 					<th:block th:if="${session.voirLatLon}">
-						<td class="num"
-							th:text="${#numbers.formatDecimal(rucher.latitude,1,4)}"></td>
-						<td class="num"
-							th:text="${#numbers.formatDecimal(rucher.longitude,1,4)}"></td>
+						<td class="num" th:text="${#numbers.formatDecimal(rucher.latitude,1,4)}"></td>
+						<td class="num" th:text="${#numbers.formatDecimal(rucher.longitude,1,4)}"></td>
 					</th:block>
 					<td class="num" th:text="${rucher.altitude}"></td>
 					<td th:text="${rucher.ressource}"></td>
@@ -98,4 +98,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
