--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -1,25 +1,37 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
-const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-const Personnes = /*[[#{Personnes}]]*/ null;
-$(document).ready(function() {
-    new DataTable('#personnes', {
-        dom: 'Blftip',
-        scrollX: true,
-	    buttons: [
-	    	'csv',
-	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: Personnes + " " + (new Date()).toLocaleDateString()},
-	        {extend: 'print', text: buttTxtPrint},
-	        {extend: 'colvis', text: buttTxtCol}
-        ]
-    });
-});
-</script>
+	<script th:inline="javascript">
+		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+		const Personnes = /*[[#{Personnes}]]*/ null;
+		$(document).ready(function () {
+			const idTbl = '#personnes';
+			new DataTable(idTbl, {
+				dom: 'Blftip',
+				scrollX: true,
+				buttons: [
+					'csv',
+					{
+						extend: 'pdf', exportOptions: {columns: ':visible'},
+						action: function (e, dt, node, config) {
+							config.title = Personnes + " " + (new Date()).toLocaleDateString();
+							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+							if (inputSearch.length !== 0) {
+								config.title += " <" + inputSearch + ">";
+							}
+							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
+						}
+					},
+					{extend: 'print', text: buttTxtPrint},
+					{extend: 'colvis', text: buttTxtCol}
+				]
+			});
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
@@ -28,16 +40,16 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-			<h1 class="item" th:text="#{Personnes}"></h1>
+				<h1 class="item" th:text="#{Personnes}"></h1>
 			</div>
 			<div class="col">
-				<a id="cree" th:href="@{/personne/cree}"
-				  class="bi-plus-lg" th:title="#{ajouterPersonne}" aria-hidden="true"></a>
-        	</div>
-        </div>
-    </div>
+				<a id="cree" th:href="@{/personne/cree}" class="bi-plus-lg" th:title="#{ajouterPersonne}"
+					aria-hidden="true"></a>
+			</div>
+		</div>
+	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm" id="personnes">			
+		<table class="table table-bordered table-striped table-sm" id="personnes">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
@@ -51,8 +63,7 @@ $(document).ready(function() {
 			</thead>
 			<tbody>
 				<tr th:each="personne : ${personnes}">
-					<td><a th:href="@{'/personne/'+${personne.id}}"
-						th:text="${personne.nom}"></a></td>
+					<td><a th:href="@{'/personne/'+${personne.id}}" th:text="${personne.nom}"></a></td>
 					<td th:text="${personne.prenom}"></td>
 					<td th:text="${personne.email}"></td>
 					<td th:text="${personne.adresse}"></td>
@@ -65,4 +76,5 @@ $(document).ready(function() {
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
