--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -6,14 +6,22 @@
 	const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 	const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 	$(document).ready(function() {
-	    new DataTable('#ruchesplus', {
+		const idTbl = '#ruchesplus';
+	    new DataTable(idTbl, {
 	        dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 	        scrollX: true,
 		    buttons: [
 		    	'csv',
 		    	{extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}, 
-		    		title: Ruches + " " + (new Date()).toLocaleDateString(),
-					orientation : 'landscape'},
+		    		action: function (e, dt, node, config) {
+							config.title = Ruches + " " + (new Date()).toLocaleDateString();
+							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+							if (inputSearch.length !== 0) {
+								config.title += " <" + inputSearch + ">";
+							}
+							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
+						},
+		    		orientation : 'landscape'},
 		        {extend: 'print', text: buttTxtPrint, exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}},
 		        {extend: 'colvis', text: buttTxtCol}
 	         ]
