--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -1,19 +1,21 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const Ruches = /*[[#{Ruches}]]*/null;
-	const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
-	const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-	$(document).ready(function() {
-		const idTbl = '#ruchesplus';
-	    new DataTable(idTbl, {
-	        dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
-	        scrollX: true,
-		    buttons: [
-		    	'csv',
-		    	{extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}, 
-		    		action: function (e, dt, node, config) {
+	<script th:inline="javascript">
+		const Ruches = /*[[#{Ruches}]]*/null;
+		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+		$(document).ready(function () {
+			const idTbl = '#ruchesplus';
+			new DataTable(idTbl, {
+				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
+				scrollX: true,
+				buttons: [
+					'csv',
+					{
+						extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'},
+						action: function (e, dt, node, config) {
 							config.title = Ruches + " " + (new Date()).toLocaleDateString();
 							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
 							if (inputSearch.length !== 0) {
@@ -21,14 +23,16 @@
 							}
 							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 						},
-		    		orientation : 'landscape'},
-		        {extend: 'print', text: buttTxtPrint, exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}},
-		        {extend: 'colvis', text: buttTxtCol}
-	         ]
-	       });    
-	});
-</script>
+						orientation: 'landscape'
+					},
+					{extend: 'print', text: buttTxtPrint, exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}},
+					{extend: 'colvis', text: buttTxtCol}
+				]
+			});
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar">Menu</nav>
 	<br />
@@ -49,7 +53,7 @@
 					<th style="background-color:lightskyblue" th:text="#{essaim}"></th>
 					<th style="background-color:lightskyblue" th:text="#{dateAcquisition}"></th>
 					<th style="background-color:lightskyblue" th:text="#{commentaire}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>					
+					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{date}"></th>
 					<th th:text="#{prod}"></th>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
@@ -60,7 +64,7 @@
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{Hausses}"></th>
-					<th style="background-color:PaleGoldenRod" >Commentaire hausse</th>
+					<th style="background-color:PaleGoldenRod">Commentaire hausse</th>
 					<th:block th:if="${session.voirLatLon}">
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
@@ -69,37 +73,38 @@
 					<th style="background-color:LemonChiffon" th:text="#{reineMarquee}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{reineCouleurMarquage}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{reineDateNaissance}"></th>
-					<th style="background-color:lightskyblue" th:text="#{commentaire1}"></th>
-					<th style="background-color:lightskyblue" th:text="#{commentaire2}"></th>
-					<th style="background-color:lightskyblue" th:text="#{commentaire3}"></th>
+					<th style="background-color:lightskyblue" th:text="#{evenement1}"></th>
+					<th style="background-color:lightskyblue" th:text="#{evenement2}"></th>
+					<th style="background-color:lightskyblue" th:text="#{evenement3}"></th>
 				</tr>
 			</thead>
 			<tbody th:with="f='dd/MM/yyyy'">
 				<tr th:with="e=${listeEvensCommentaireEsaim[rucheStat.index]}, 
 						eh=${evensHaussesRuches[rucheStat.index]}, 
 						ec=${listeEvenCadre[rucheStat.index]},
-						ep=${evensPoidsRuches[rucheStat.index]}"
-					th:each="ruche : ${ruches}">
-					<td><a th:href="@{'/ruche/'+${ruche.id}}"
-						th:text="${ruche.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}"
-						th:text="${ruche.essaim?.nom}"></a></td>
+						ep=${evensPoidsRuches[rucheStat.index]}" th:each="ruche : ${ruches}">
+					<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}" th:text="${ruche.essaim?.nom}"></a></td>
 					<td th:text="${ruche.essaim?.dateAcquisition}"></td>
 					<td th:text="${ruche.essaim?.commentaire}"></td>
-					<td><a th:href="@{'/rucher/'+${ruche.rucher?.id}}"
-						th:text="${ruche.rucher?.nom}"></a></td>					
+					<td><a th:href="@{'/rucher/'+${ruche.rucher?.id}}" th:text="${ruche.rucher?.nom}"></a></td>
 					<td th:text="${dateAjoutRucher[rucheStat.index]}"></td>
 					<td th:text="${ruche.production}? #{oui} : #{non}"></td>
-					<td th:if="${session.voirInactif}"
-						th:text="${ruche.active}? #{oui} : #{non}"></td>
+					<td th:if="${session.voirInactif}" th:text="${ruche.active}? #{oui} : #{non}"></td>
 					<td th:text="${ruche.dateAcquisition}"></td>
 					<td class="num" th:text="${#numbers.formatDecimal(ruche.poidsVide,1,1,'DEFAULT')}"></td>
-					<td class="num" th:text="${ep == null}?'':${#numbers.formatDecimal(ep.valeur,1,1,'DEFAULT')}+' '+${#temporals.format(ep.date, f)}+' '+${ep.commentaire}"></td>					
-					<td class="num" th:text="${ec == null}?'':${ec.valeur}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}"></td>
+					<td class="num"
+						th:text="${ep == null}?'':${#numbers.formatDecimal(ep.valeur,1,1,'DEFAULT')}+' '+${#temporals.format(ep.date, f)}+' '+${ep.commentaire}">
+					</td>
+					<td class="num"
+						th:text="${ec == null}?'':${ec.valeur}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}">
+					</td>
 					<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
 					<td th:text="${ruche.type?.nom}"></td>
 					<td th:text="${hausseNoms[rucheStat.index]}"></td>
-					<td th:text="${eh == null}?'':(${nbHausses[rucheStat.index]} &gt; 1 ? ${eh.hausse.nom} + '  ':'') + ${#temporals.format(eh.date, f)} + ' ' + ${eh.commentaire}"></td>
+					<td
+						th:text="${eh == null}?'':(${nbHausses[rucheStat.index]} &gt; 1 ? ${eh.hausse.nom} + '  ':'') + ${#temporals.format(eh.date, f)} + ' ' + ${eh.commentaire}">
+					</td>
 					<th:block th:if="${session.voirLatLon}">
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.latitude,1,5)}"></td>
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.longitude,1,5)}"></td>
@@ -108,14 +113,8 @@
 					<td th:text="${ruche.essaim?.reineMarquee}? #{oui} : #{non}"></td>
 					<td th:text="${ruche.essaim}? #{${ruche.essaim.reineCouleurMarquage}} : '-'"></td>
 					<td th:text="${ruche.essaim?.reineDateNaissance}"></td>
-					<td th:text=
-					  "${#arrays.length(e)} &gt; 0 ? ${#temporals.format(e[0].date, f)} + ' ' + ${e[0].commentaire}"
-					></td>
-					<td th:text=
-					  "${#arrays.length(e)} &gt; 1 ? ${#temporals.format(e[1].date, f)} + ' ' + ${e[1].commentaire}"
-					></td>
-					<td th:text=
-					  "${#arrays.length(e)} &gt; 2 ? ${#temporals.format(e[2].date, f)} + ' ' + ${e[2].commentaire}"
+					<td th:each="i : ${ {0,1,2} }" th:text="${#arrays.length(e)} &gt; ${i} ?
+					#{${e[i].type}} + ' ' + (${e[i].valeur != null} ? ${e[i].valeur} + ' ' : '') + ${#temporals.format(e[i].date, f)} + ' ' + ${e[i].commentaire}"
 					></td>
 				</tr>
 			</tbody>
@@ -123,4 +122,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
