detailEssaim, Ruche et Hausse Dernier événements, et type Commentaire

--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -180,7 +180,7 @@ $().ready(function() {
 			</tbody>
 		</table>
 		<th:block th:if="${(eveRempl != null) or (eveComm != null)}">
-			<h6 th:text="#{evenements}"></h6>
+			<h6 th:text="#{derniersEve}"></h6>
 			<table class="table table-sm table-bordered">
 				<thead>
 					<tr>
@@ -190,7 +190,7 @@ $().ready(function() {
 						<th style="background-color: PaleGoldenRod"
 							th:text="#{commentaire}"></th>
 						<th style="background-color: LemonChiffon"
-							th:text="#{commentaire}"></th>
+							th:text="#{COMMENTAIREHAUSSE}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{date}"></th>
 					</tr>
 				</thead>
