--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -186,12 +186,12 @@ $().ready(function() {
 			</tbody>
 		</table>
 		<th:block th:if="${eveComm != null}">
-			<h6 th:text="#{evenements}"></h6>
+			<h6 th:text="#{derniersEve}"></h6>
 			<table class="table table-sm table-bordered">
 				<thead>
 					<tr>
 						<th style="background-color: PaleGoldenRod"
-							th:text="#{commentaire}"></th>
+							th:text="#{COMMENTAIRERUCHE}"></th>
 						<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
 					</tr>
 				</thead>
