--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -153,7 +153,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<h6 th:text="#{evenements}"
+		<h6 th:text="#{derniersEve}"
 			th:if="${(eveTraite != null) or (eveSucre != null) or 
 			(eveComm != null) or (evePesee != null) or (eveCadre != null)}">
 		</h6>
@@ -169,7 +169,7 @@
 					<th style="background-color: LemonChiffon" th:text="#{date}"></th>
 					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
 					<th style="background-color: PaleGoldenRod"
-						th:text="#{commentaire}"></th>
+						th:text="#{COMMENTAIREESSAIM}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
 				</tr>
 			</thead>
