Liste détaillée libellé : Date pose hausse

--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{Hausses}"></th>
-					<th style="background-color:PaleGoldenRod" >Commentaire hausse</th>
+					<th style="background-color:PaleGoldenRod" th:text="#{datePoseHausse}"></th>
 					<th:block th:if="${session.voirLatLon}">
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
