Supprimé scrollX=true pour ruchesListePlus, plus sympa sur PC

--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -10,7 +10,7 @@
 			const idTbl = '#ruchesplus';
 			new DataTable(idTbl, {
 				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
-				scrollX: true,
+				// scrollX: true,
 				buttons: [
 					'csv',
 					{
