--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -58,7 +58,6 @@ $(document).ready(function() {
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{Hausses}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{poseHausse}"></th>
 					<th:block th:if="${session.voirLatLon}">
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
@@ -96,8 +95,11 @@ $(document).ready(function() {
 					<td class="num" th:text="${ec == null}?'':${ec.valeur}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}"></td>
 					<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
 					<td th:text="${ruche.type?.nom}"></td>
-					<td th:text="${hausseNoms[rucheStat.index]}"></td>
-					<td th:text="${eh == null}?'':(${nbHausses[rucheStat.index]} &gt; 1 ? ${eh.hausse.nom} + '  ':'') + ${#temporals.format(eh.date, f)} + ' ' + ${eh.commentaire}"></td>
+					<td>
+				      <th:block th:each="ehh : ${eh}"
+						 th:text="${ehh.hausse.nom} + ' ' + ${#temporals.format(ehh.date, f)} + ' ' + ${ehh.commentaire} + ' '">
+					  </th:block>
+					</td>
 					<th:block th:if="${session.voirLatLon}">
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.latitude,1,5)}"></td>
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.longitude,1,5)}"></td>
