--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -10,11 +10,11 @@
 			const idTbl = '#ruchesplus';
 			new DataTable(idTbl, {
 				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
-				// scrollX: true,
+				scrollX: true,
 				buttons: [
 					'csv',
 					{
-						extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'},
+						extend: 'pdf', exportOptions: {columns: ':visible'},
 						action: function (e, dt, node, config) {
 							config.title = Ruches + " " + (new Date()).toLocaleDateString();
 							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
@@ -52,7 +52,7 @@
 					<th style="background-color:LightGoldenRodYellow" th:text="#{nom}"></th>
 					<th style="background-color:lightskyblue" th:text="#{essaim}"></th>
 					<th style="background-color:lightskyblue" th:text="#{dateAcquisition}"></th>
-					<th style="background-color:lightskyblue" th:text="#{commentaire}"></th>
+					<th style="background-color:lightskyblue" th:text="#{COMMENTAIREESSAIM}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{date}"></th>
 					<th th:text="#{prod}"></th>
@@ -68,7 +68,7 @@
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
 					</th:block>
-					<th th:text="#{commentaire}"></th>
+					<th th:text="#{COMMENTAIRERUCHE}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{reineMarquee}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{reineCouleurMarquage}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{reineDateNaissance}"></th>
