--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -4,17 +4,25 @@
 <script th:inline="javascript">
 const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-const listeRuches = /*[[#{listeRuches}]]*/ null;
+const Ruches = /*[[#{Ruches}]]*/ null;
 const rucher = /*[[#{rucher}]]*/ null;
 const nomrucher = /*[[${rucher.nom}]]*/ null;
 $(document).ready(function() {
-    new DataTable('#ruches', {
+	const idTbl = '#ruches';
+    new DataTable(idTbl, {
         dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
         scrollX: true,
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: `${listeRuches} ${rucher} ${nomrucher} ${(new Date()).toLocaleDateString()}`,
+	    		action: function (e, dt, node, config) {
+							config.title = `${Ruches} ${rucher} ${nomrucher} ${(new Date()).toLocaleDateString()}`;
+							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+							if (inputSearch.length !== 0) {
+								config.title += " <" + inputSearch + ">";
+							}
+							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
+						},
 				orientation : 'landscape'},
             {extend: 'print', text: buttTxtPrint},
             {extend: 'colvis', text: buttTxtCol}
@@ -59,7 +67,7 @@ $(document).ready(function() {
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
 					</th:block>
-					<th th:text="#{commentaire}"></th>
+					<th th:text="#{COMMENTAIRERUCHE}"></th>
 				</tr>
 			</thead>
 			<tbody>
