--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -14,8 +14,10 @@ $(document).ready(function() {
         scrollX: true,
 	    buttons: [
 	    	'csv',
-	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-			action: function (e, dt, node, config) {
+	    	{
+				extend: 'pdf',
+				exportOptions: {columns: ':visible'}, 
+				action: function (e, dt, node, config) {
 							config.title = `${Ruches} ${rucher} ${nomrucher} ${(new Date()).toLocaleDateString()}`;
 							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
 							if (inputSearch.length !== 0) {
@@ -24,7 +26,11 @@ $(document).ready(function() {
 							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 						},
 				orientation : 'landscape'},
-	        {extend: 'print', text: buttTxtPrint, exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}},
+	        {
+				extend: 'print',
+				text: buttTxtPrint,
+				exportOptions: {columns: ':visible'},
+				orientation : 'landscape'},
 	        {extend: 'colvis', text: buttTxtCol}
          ]
        });    
