spring boot 3.1.1, correction bug eveSucreListe et ajouts scollX

--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -21,6 +21,7 @@
 		new DataTable('#evenementsnotif', {
 			order : [ [ 0, 'desc' ] ],
 			dom : 'Blftip',
+			scrollX: true,
 			buttons : [ 'csv', {
 				extend : 'pdf',
 				exportOptions : {
