--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -16,6 +16,7 @@
 				new DataTable(idTbl, {
 					order : [ [ 0, 'desc' ] ],
 					dom : 'Blftip',
+					scrollX: true,
 					buttons : [ 'csv', {
 						extend : 'pdf',
 						exportOptions : {
