--- a/src/main/resources/templates/evenement/evenementTraitementListe.html
+++ b/src/main/resources/templates/evenement/evenementTraitementListe.html
@@ -36,7 +36,7 @@
 				</span>
 			</div>
 			<div
-				th:insert="includeForm :: evenementListeDates(retController='/evenement/essaim/listeTraitement')"
+				th:insert="includeForm :: evenementListeDates(retController='/evenement/essaim/listeTraitement/' + ${tous})"
 				class="col"></div>
 		</div>
 	</div>
