--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -1,23 +1,24 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
-const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-const Ruches = /*[[#{Ruches}]]*/ null;
-const rucher = /*[[#{rucher}]]*/ null;
-const nomrucher = /*[[${rucher.nom}]]*/ null;
-$(document).ready(function() {
-	const idTbl = '#ruches';
-    new DataTable(idTbl, {
-        dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
-        scrollX: true,
-	    buttons: [
-	    	'csv',
-	    	{
-				extend: 'pdf',
-				exportOptions: {columns: ':visible'}, 
-				action: function (e, dt, node, config) {
+	<script th:inline="javascript">
+		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+		const Ruches = /*[[#{Ruches}]]*/ null;
+		const rucher = /*[[#{rucher}]]*/ null;
+		const nomrucher = /*[[${rucher.nom}]]*/ null;
+		$(document).ready(function () {
+			const idTbl = '#ruches';
+			new DataTable(idTbl, {
+				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
+				scrollX: true,
+				buttons: [
+					'csv',
+					{
+						extend: 'pdf',
+						exportOptions: {columns: ':visible'},
+						action: function (e, dt, node, config) {
 							config.title = `${Ruches} ${rucher} ${nomrucher} ${(new Date()).toLocaleDateString()}`;
 							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
 							if (inputSearch.length !== 0) {
@@ -25,18 +26,21 @@ $(document).ready(function() {
 							}
 							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 						},
-				orientation : 'landscape'},
-	        {
-				extend: 'print',
-				text: buttTxtPrint,
-				exportOptions: {columns: ':visible'},
-				orientation : 'landscape'},
-	        {extend: 'colvis', text: buttTxtCol}
-         ]
-       });    
-});
-</script>
+						orientation: 'landscape'
+					},
+					{
+						extend: 'print',
+						text: buttTxtPrint,
+						exportOptions: {columns: ':visible'},
+						orientation: 'landscape'
+					},
+					{extend: 'colvis', text: buttTxtCol}
+				]
+			});
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar">Menu</nav>
 	<br />
@@ -46,9 +50,8 @@ $(document).ready(function() {
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{listeRuches}+' '"></th:block>	
-					<a th:href="@{'/rucher/'+${rucher.id}}"
-						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<th:block th:text="#{listeRuches}+' '"></th:block>
+					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
 				</h1>
 			</div>
 		</div>
@@ -86,32 +89,33 @@ $(document).ready(function() {
 				</tr>
 			</thead>
 			<tbody th:with="f='dd/MM/yyyy'">
-				<tr th:with="e=${listeEvensCommentaireEsaim[rucheStat.index]},
+				<tr th:each="ruche : ${ruches}" th:with="e=${listeEvensCommentaireEsaim[rucheStat.index]},
 						eh=${evensHaussesRuches[rucheStat.index]},
+						h=${hausses[rucheStat.index]},
 						ec=${listeEvenCadre[rucheStat.index]},
-						ep=${evensPoidsRuches[rucheStat.index]}"
-					th:each="ruche : ${ruches}">
+						ep=${evensPoidsRuches[rucheStat.index]}">
 					<td th:text="${ordreRuche[rucheStat.index]}"></td>
-					<td><a th:href="@{'/ruche/'+${ruche.id}}"
-						th:text="${ruche.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}"
-						th:text="${ruche.essaim?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}" th:text="${ruche.essaim?.nom}"></a></td>
 					<td th:text="${ruche.essaim?.dateAcquisition}"></td>
 					<td th:text="${ruche.essaim?.commentaire}"></td>
 					<td th:text="${dateAjoutRucher[rucheStat.index]}"></td>
 					<td th:text="${ruche.production}? #{oui} : #{non}"></td>
-					<td th:if="${session.voirInactif}"
-						th:text="${ruche.active}? #{oui} : #{non}"></td>
+					<td th:if="${session.voirInactif}" th:text="${ruche.active}? #{oui} : #{non}"></td>
 					<td th:text="${ruche.dateAcquisition}"></td>
 					<td class="num" th:text="${#numbers.formatDecimal(ruche.poidsVide,1,1,'DEFAULT')}"></td>
-					<td class="num" th:text="${ep == null}?'':${#numbers.formatDecimal(ep.valeur,1,1,'DEFAULT')}+' '+${#temporals.format(ep.date, f)}+' '+${ep.commentaire}"></td>					
-					<td class="num" th:text="${ec == null}?'':${ec.valeur}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}"></td>
+					<td class="num"
+						th:text="${ep == null}?'':${#numbers.formatDecimal(ep.valeur,1,1,'DEFAULT')}+' '+${#temporals.format(ep.date, f)}+' '+${ep.commentaire}">
+					</td>
+					<td class="num"
+						th:text="${ec == null}?'':${ec.valeur}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}">
+					</td>
 					<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
 					<td th:text="${ruche.type?.nom}"></td>
 					<td>
-				      <th:block th:each="ehh : ${eh}"
-						 th:text="${ehh.hausse.nom} + ' ' + ${#temporals.format(ehh.date, f)} + ' ' + ${ehh.commentaire} + ' '">
-					  </th:block>
+						<th:block th:each="hh : ${h}" th:with="ev=${eh[hhStat.index]}" th:text="${hh.nom} + ' ' + (${ev == null}?'':${#temporals.format(ev.date, f)})
+						    + ' ' + (${ev == null}?'':${ev.commentaire}) + ' '">
+						</th:block>
 					</td>
 					<th:block th:if="${session.voirLatLon}">
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.latitude,1,5)}"></td>
@@ -121,13 +125,15 @@ $(document).ready(function() {
 					<td th:text="${ruche.essaim?.reineMarquee}? #{oui} : #{non}"></td>
 					<td th:text="${ruche.essaim}? #{${ruche.essaim.reineCouleurMarquage}} : '-'"></td>
 					<td th:text="${ruche.essaim?.reineDateNaissance}"></td>
-					<td th:each="i : ${ {0,1,2} }" th:text="${#arrays.length(e)} &gt; ${i} ?
-					#{${e[i].type}} + ' ' + (${e[i].valeur != null} ? ${e[i].valeur} + ' ' : '') + ${#temporals.format(e[i].date, f)} + ' ' + ${e[i].commentaire}"
-					></td>
+					<td th:each="i : ${ {0,1,2} }"
+						th:text="${#arrays.length(e)} &gt; ${i} ?
+					#{${e[i].type}} + ' ' + (${e[i].valeur != null} ? ${e[i].valeur} + ' ' : '') + ${#temporals.format(e[i].date, f)} + ' ' + ${e[i].commentaire}">
+					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
