essaimStatistiques appel initial : ?masquerInactif=on

--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -86,7 +86,7 @@
 				<a id="traitement" href="#" class="selection bi-bug" th:title="#{evenementsTraitement}"
 					aria-hidden="true"></a>
 				&nbsp;
-				<a th:href="@{/essaim/statistiques}" class="bi-table" th:title="#{statistiquesproduction}"
+				<a th:href="@{/essaim/statistiques?masquerInactif=on}" class="bi-table" th:title="#{statistiquesproduction}"
 					aria-hidden="true"></a>
 				<a th:href="@{/essaim/statistiquesage}" class="bi-bar-chart" th:title="#{statistiquesage}"
 					aria-hidden="true"></a>
